--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@junglesta/fiko",
   "version_TLDR": "AUTO STYLE SEMANTIC HTML | BASE CLASSLESS 2023 CSS TEMPLATE",
   "version_name": "🐸",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "author": "Rokma",
   "contributors": "Toybreaker",
   "main": "css/fiko.min.css",
@@ -18,18 +18,16 @@
   "keywords": [
     "css",
     "css-framework",
+    "scss-framework",
     "dark-mode",
     "dark-theme",
     "lightweight",
     "minimal",
-    "minimalist",
-    "minimalistic",
     "native-html",
-    "scss-framework",
     "semantic"
   ],
   "scripts": {
-    "F1P": "run-s build",
+    "B": "run-s build",
     "build": "run-s start lint \"build:*\" done --silent",
     "dev": "nodemon -q --watch scss/ --ext scss --exec 'run-s build'",
     "lint": "run-s \"lint:*\" --silent",
@@ -46,7 +44,7 @@
     "done": "echo '\\033[32m[@junglesta/fiko] 🐸 Done\\033[0m'"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.16",
     "caniuse-lite": "1.0.30001481",
     "clean-css-cli": "^5.6.2",
     "css-declaration-sorter": "^6.4.1",
@@ -56,7 +54,7 @@
     "postcss-cli": "^10.1.0",
     "postcss-scss": "^4.0.8",
     "prettier": "^2.8.8",
-    "sass": "^1.67.0"
+    "sass": "^1.68.0"
   },
   "browserslist": [
     ">= 0.5%",
