--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@junglesta/fiko",
+  "name": "@toybreaker/fiko",
   "version_TLDR": "AUTO STYLE SEMANTIC HTML | BASE CLASSLESS 2023 CSS TEMPLATE",
   "version_name": "🐸",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "author": "Rokma",
   "contributors": "Toybreaker",
   "main": "css/fiko.min.css",
@@ -48,7 +48,7 @@
     "caniuse-lite": "1.0.30001481",
     "clean-css-cli": "^5.6.2",
     "css-declaration-sorter": "^6.4.1",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.30",
     "postcss-cli": "^10.1.0",
@@ -61,5 +61,8 @@
     "last 2 major versions",
     "not dead",
     "not ie > 0"
-  ]
+  ],
+  "dependencies": {
+    "user": "^0.0.0"
+  }
 }
