cleanup wip |  big mess | v0.2.5

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,8 @@
     }
   },
   "files.associations": {
-    "*.mdx": "markdown"
+    "*.mdx": "markdown",
+    "*.md": "markdown"
   },
   "colorize.include": [
     "**/*.astro",
