--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fiko",
   "version_TLDR": "AUTO STYLE SEMANTIC HTML | BASE CLASSLESS CSS TEMPLATE",
   "version_name": "🐸",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "author": "Rokma",
   "contributors": "Toybreaker",
   "main": "css/fiko.min.css",
@@ -26,11 +26,11 @@
     "semantic"
   ],
   "scripts": {
-    "B": "run-s build",
-    "build": "run-s start lint \"build:*\" done --silent",
+    "B": "npm-run-all -s. build",
+    "build": "npm-run-all -s. start lint \"build:*\" done --silent",
     "build0": "sass --style expanded --no-source-map scss/:css/",
-    "dev": "nodemon -q --watch scss/ --ext scss --exec 'run-s build'",
-    "lint": "run-s \"lint:*\" --silent",
+    "dev": "nodemon -q --watch scss/ --ext scss --exec 'npm-run-all -s. build'",
+    "lint": "npm-run-all -s. \"lint:*\" --silent",
     "lint:prettier": "prettier --write --loglevel silent 'scss/**/*.scss'",
     "lint:sort-scss": "postcss --config scss ./scss/**/*.scss --replace",
     "build:css": "sass --load-path=node_modules/@picocss/colors/scss --style expanded --source-map --embed-sources --no-error-css scss/:css/",
