giants leaps as kangaroos | v0.3.1

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "fiko",
-  "version_TLDR": "3 SEMANTIC AUTO-STYLING CSS TEMPLATES. CLASSLESS, FLUID",
   "version_name": "🐸",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "author": "Rokma",
   "contributors": "Toybreaker",
-  "main": "css/fiko.min.css",
+  "main": "package/fiko.css",
   "homepage": "https://fiko.rokma.rocks",
   "license": "MIT",
   "repository": {
@@ -17,23 +16,24 @@
   },
   "keywords": [
     "css",
+    "classless",
     "css-framework",
     "dark-mode",
-    "dark-theme",
     "lightweight",
     "minimal",
     "native-html",
-    "semantic"
+    "semantic",
+    "fluid"
   ],
   "scripts": {
     "F": "npm-run-all build",
     "build": "npm-run-all start lint \"build:*\" done",
-    "build0": "sass --style expanded --no-source-map scss/:package/",
+    "buildcss": "sass --style expanded --no-source-map ./src/scss/:./dist/package/",
     "dev": "nodemon -q --watch scss/ --ext scss --exec 'npm-run-all build'",
     "lint": "npm-run-all  \"lint:*\"",
-    "lint:prettier": "prettier --write --loglevel silent 'src/scss/**/*.scss'",
+    "lint:prettier": "prettier --write --loglevel silent './src/scss/**/*.scss'",
     "lint:sort-scss": "postcss --config scss ./src/scss/**/*.scss --replace",
-    "build:css": "sass --load-path=node_modules/fiko/colors/scss --style expanded --source-map --embed-sources --no-error-css src/scss/:package/",
+    "build:css": "sass --load-path=@toybreaker/fiko/src/scss --style expanded --source-map --embed-sources --no-error-css ./src/scss/:package/",
     "build:autoprefix": "postcss --config css --replace package/*.css !package/*.min.css",
     "build:minify": "cleancss -O1 --with-rebase --batch --batch-suffix .min package/*.css !package/*.min.css",
     "prelint": "echo '[fiko] 🐸 LINT'",
@@ -50,9 +50,9 @@
     "css-declaration-sorter": "^6.4.1",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.30",
+    "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
-    "postcss-scss": "^4.0.8",
+    "postcss-scss": "^4.0.9",
     "prettier": "^2.8.8",
     "sass": "^1.68.0"
   },
