--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,29 @@
-# publish only
-!package/
+# NPM RULES HERE | PUBLISH ONLY:
+!dist/web/fiko/package/
 
-# omit
+# LETS DOUBLE CHECK
+
+# OMIT PROJECT SPECIFIC STUFF
+dist/web/pico
+dist/web/index.html
+
+# OMIT WORKFILES
 node_modules
+/node_modules/
 src/
-test/
 .vscode
-.vscode/
+
+# OMIT OS OR EDITOR FOLDERS
+._*
+.cache
+.DS_Store
+.idea
+.project
+.settings
+.tmproj
+*.esproj
+*.sublime-project
+*.sublime-workspace
+nbproject
+Thumbs.db
+/.vscode/
