--- a/.npmignore
+++ b/.npmignore
@@ -1,29 +1,2 @@
 # NPM RULES HERE | PUBLISH ONLY:
-!dist/web/fiko/package/
-
-# LETS DOUBLE CHECK
-
-# OMIT PROJECT SPECIFIC STUFF
-dist/web/pico
-dist/web/index.html
-
-# OMIT WORKFILES
-node_modules
-/node_modules/
-src/
-.vscode
-
-# OMIT OS OR EDITOR FOLDERS
-._*
-.cache
-.DS_Store
-.idea
-.project
-.settings
-.tmproj
-*.esproj
-*.sublime-project
-*.sublime-workspace
-nbproject
-Thumbs.db
-/.vscode/
+!dist/package/
