many fixes| not yet ok | v0.3.9

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fiko",
   "type": "module",
   "version_name": "🐸",
-  "version": "0.3.7",
+  "version": "0.3.9",
   "author": "Rokma",
   "contributors": "Toybreaker",
   "main": "package/fiko.css",
@@ -37,12 +37,9 @@
     "lint": "npm-run-all  \"lint:*\"",
     "lint:prettier": "prettier --write --loglevel silent './src/scss/**/*.scss'",
     "lint:sort-scss": "postcss --config scss ./src/scss/**/*.scss --replace",
-    "build:css": "sass --load-path=@toybreaker/fiko/src/scss --style expanded --source-map --embed-sources --no-error-css ./src/scss/:package/",
-    "build:autoprefix": "postcss --config css --replace package/*.css !package/*.min.css",
-    "build:minify": "cleancss -O1 --with-rebase --batch --batch-suffix .min package/*.css !package/*.min.css",
+    "build:css": "sass --load-path=@toybreaker/fiko/src/scss --style expanded --source-map --embed-sources --no-error-css ./src/scss/:./dist/package/",
     "prelint": "echo '[fiko] 🐸 LINT'",
     "prebuild:css": "echo '[fiko] 🐸 COMPILE'",
-    "prebuild:autoprefix": "echo '[fiko] 🐸 AUTOPREFIX'",
     "prebuild:minify": "echo '[fiko] 🐸 MINIFY'",
     "start": "echo '\\033[96m[fiko] 🐸 Start\\033[0m'",
     "done": "echo '\\033[32m[fiko] 🐸 Done\\033[0m'"
