fixed web path to css | v0.4.0

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fiko",
   "type": "module",
   "version_name": "🐸",
-  "version": "0.3.11",
+  "version": "0.4.0",
   "author": "Rokma",
   "contributors": "Toybreaker",
   "main": "package/fiko.css",
@@ -38,6 +38,7 @@
     "lint:prettier": "prettier --write --loglevel silent './src/scss/**/*.scss'",
     "lint:sort-scss": "postcss --config scss ./src/scss/**/*.scss --replace",
     "build:css": "sass --load-path=@toybreaker/fiko/src/scss --style expanded --source-map --embed-sources --no-error-css ./src/scss/:./dist/package/",
+    "build:cssWEB": "sass --load-path=@toybreaker/fiko/src/scss --style expanded --source-map --embed-sources --no-error-css ./src/scss/:./dist/web/css/",
     "prelint": "echo '[fiko] 🐸 LINT'",
     "prebuild:css": "echo '[fiko] 🐸 COMPILE'",
     "prebuild:minify": "echo '[fiko] 🐸 MINIFY'",
