--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 *.sublime-workspace
 nbproject
 Thumbs.db
-/.vscode/
 
 # Numerous always-ignore extensions
 *.diff
@@ -27,4 +26,6 @@ Thumbs.db
 
 # Folders to ignore
 node_modules
-lab
+_lab
+_lab*
+_lab/*.*
