Responsive padding setup | v0.5.3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,17 @@
   ],
   "typescript.inlayHints.parameterNames.enabled": "all",
   "astro.trace.server": "verbose",
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "colorize.languages": [
+    "md",
+    "css",
+    "sass",
+    "scss",
+    "less",
+    "postcss",
+    "sss",
+    "stylus",
+    "xml",
+    "svg"
+  ]
 }
