--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fiko",
   "type": "module",
   "version_name": "🐸",
-  "version": "0.5.13",
+  "version": "0.5.14",
   "author": "Rokma",
   "contributors": "Toybreaker",
   "main": "package/fiko.css",
@@ -31,7 +31,7 @@
     "customisable"
   ],
   "scripts": {
-    "dev": "browser-sync start --s 'package' --files 'package'--no-inject-changes",
+    "dev": "browser-sync start --s 'package' --files 'package'",
     "build": "echo 'fiko.css comes ready to swim, no build steps. 🐸 Done!'"
   },
   "devDependencies": {
