--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fiko",
   "type": "module",
   "version_name": "🐸",
-  "version": "0.6.7",
+  "version": "0.6.8",
   "author": "Rokma",
   "contributors": "Toybreaker",
   "main": "package/fiko.css",
@@ -10,7 +10,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/toybreaker/fiko.git"
+    "url": "git+https://github.com/toybreaker/fiko.git"
   },
   "publishConfig": {
     "tag": "latest"
