--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,5 +72,9 @@
     "stylus",
     "xml",
     "svg"
-  ]
+  ],
+  "editor.inlineSuggest.showToolbar": "always",
+  "editor.suggest.localityBonus": true,
+  "editor.suggest.preview": true,
+  "editor.suggest.shareSuggestSelections": true
 }
