padding-inline/block + grid | v0.7.12

--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "fiko",
   "type": "module",
   "version_name": "🐸",
-  "version": "0.7.11",
+  "version": "0.7.12",
   "author": "Rokma",
-  "contributors": "Toybreaker",
+  "contributors": [
+    "toybreaker",
+    "rokma"
+  ],
   "main": "package/fiko.css",
   "homepage": "https://fiko.rokma.rocks",
   "license": "MIT",
@@ -17,18 +20,24 @@
   },
   "keywords": [
     "normalise",
-    "css",
     "classless",
+    "container-queries",
+    "css",
+    "css4",
     "css-framework",
+    "css-layers",
+    "css-nesting",
+    "css-variables",
+    "customisable",
     "dark-mode",
+    "fluid",
+    "p3",
     "lightweight",
     "minimal",
     "native-html",
+    "oklch",
     "semantic",
-    "fluid",
-    "layers",
-    "css-variables",
-    "customisable"
+    "wide-gamut-colors"
   ],
   "scripts": {
     "dev": "browser-sync start --s 'package' --files 'package'",
